--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>HellaZ Slideshow</title>
+  <title>HellaZ Team</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="./style.css">
 
 </head>
@@ -20,7 +20,8 @@
       <h1>Hellenic</h1>
       <p>A digital-first creative and innovative agency with specialization in development of web applications.</p>
       <p>We have built and keep on building unique applications for our clients all over the world. </p>
-      
+      <p>Our team of experienced professionals is dedicated to providing cutting-edge solutions that will set you apart from the competition.</p>
+      <p></p>
     </div>
   </div>
 
@@ -30,6 +31,8 @@
     <div class="slide__content">
       <h1>Excellence</h1>
       <p>We focus on users experience, quality, scalability and ease-of-use. We deliver the Simple solutions to your needs.</p>
+      <p>we pride ourselves on delivering outstanding results and impeccable service to our clients. Whether you're looking to enhance your online presence, launch a new website, or improve your digital marketing strategies, we have the expertise to help you achieve your goals.</p>
+      <p>Don't settle for mediocrity when you can have excellence.</p>   
     </div>
   </div>
 
@@ -37,8 +40,9 @@
   <input type="radio" id="slideCheckbox3" name="slide"></input>
   <div class="slide">
     <div class="slide__content">
-      <h1>Localization</h1>
-      <p>Globalization to Localization</p>
+      <h1>Loyalty</h1>
+      <p>Customer needs come first. And we understand the importance of building strong relationships with your customers</p>
+      <p>Let us show you how our innovative approaches can help you build stronger connections with your customers and drive success for your business.</p>
     </div>
   </div>
 
@@ -46,17 +50,20 @@
   <input type="radio" id="slideCheckbox4" name="slide"></input>
   <div class="slide">
     <div class="slide__content">
-      <h1>Loyalty</h1>
-      <p>Customer needs</p>
+      <h1>Localization</h1>
+      <p>Are you looking to expand your internet presence globally? Globalization to Localization</p>
+      <p>From website translation to cultural adaptation, our comprehensive range of services will ensure that your message resonates with your target audience in any corner of the world. Trust us to provide you with tailor-made solutions that will elevate your brand to new heights.</p>
     </div>
   </div>
 
+  
   <!-- Slide 5 -->
   <input type="radio" id="slideCheckbox5" name="slide"></input>
   <div class="slide">
     <div class="slide__content">
       <h1>Authentic</h1>
-      <p>It's over</p>
+      <p>Genuine and innovative Web Solutions. Authentic Deliveries.</p>
+      <p>We believe in providing our clients with solutions that are not only effective but also authentic. We understand that every business is unique, which is why we take the time to tailor our services to meet your specific needs.</p>
     </div>
   </div>
 
@@ -67,7 +74,9 @@
   <div class="slide">
     <div class="slide__content">
       <h1>Zero to Hero</h1>
-      <p>In the Zone, Zooming in on you, With Zest</p>
+      <p>Your solution for all things web and internet related! As the experts in digital solutions, we are here to take your online presence from zero to hero in no time. </p>
+      <p>Our team of talented professionals is dedicated to helping you achieve your goals and stand out in the crowded online marketplace. Whether you need a new website, help with SEO, or a social media strategy, we have the skills and expertise to make it happen.</p>
+      <p>Don't settle for mediocrity when you can be a hero in the digital world.</p>
     </div>
   </div>
 
@@ -77,7 +86,9 @@
     <div class="slide__content">
       <h1>TEAM</h1>
       <p>Et voila.</p>
-      <p>It's over</p>
+      <p>Our team of experts is dedicated to providing you with tailor-made solutions that are designed to meet your specific needs and goals.</p>
+      <p> Whether you're looking to build a new website, improve your online visibility, or enhance your digital marketing strategy, we've got you covered.</p>
+      <p>Let's work together to create a standout website that will impress your target audience and drive results for your business.</p>
     </div>
   </div>
 
