--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <input type="radio" id="slideCheckbox1" name="slide" checked autofocus></input>
   <div class="slide">
     <div class="slide__html">
-      <!-- You can include HTML instead of a background image using .slide__html -->
+      <h1>Hellenic</h1>
     </div>
     <div class="slide__content">
       <h1>Hellenic</h1>
