--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
   <!-- Slide 2 -->
   <input type="radio" id="slideCheckbox2" name="slide"></input>
   <div class="slide">
+    <div class="slide__html">
+      <h1>Excellence</h1>
+    </div>
     <div class="slide__content">
       <h1>Excellence</h1>
       <p>We focus on users experience, quality, scalability and ease-of-use. We deliver the Simple solutions to your needs.</p>
@@ -39,6 +42,9 @@
   <!-- Slide 3 -->
   <input type="radio" id="slideCheckbox3" name="slide"></input>
   <div class="slide">
+    <div class="slide__html">
+      <h1>Loyalty</h1>
+    </div>
     <div class="slide__content">
       <h1>Loyalty</h1>
       <p>Customer needs come first. And we understand the importance of building strong relationships with your customers</p>
