--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
   <!-- Slide 4 -->
   <input type="radio" id="slideCheckbox4" name="slide"></input>
   <div class="slide">
+    <div class="slide__html">
+      <h1>Localization</h1>
+    </div>
     <div class="slide__content">
       <h1>Localization</h1>
       <p>Are you looking to expand your internet presence globally? Globalization to Localization</p>
@@ -66,6 +69,9 @@
   <!-- Slide 5 -->
   <input type="radio" id="slideCheckbox5" name="slide"></input>
   <div class="slide">
+    <div class="slide__html">
+      <h1>Authentic</h1>
+    </div>
     <div class="slide__content">
       <h1>Authentic</h1>
       <p>Genuine and innovative Web Solutions. Authentic Deliveries.</p>
@@ -78,6 +84,9 @@
   <!-- Slide 6 -->
   <input type="radio" id="slideCheckbox6" name="slide"></input>
   <div class="slide">
+    <div class="slide__html">
+      <h1>Zero to Hero</h1>
+    </div>
     <div class="slide__content">
       <h1>Zero to Hero</h1>
       <p>Your solution for all things web and internet related! As the experts in digital solutions, we are here to take your online presence from zero to hero in no time. </p>
@@ -89,6 +98,9 @@
   <!-- Slide 7 -->
   <input type="radio" id="slideCheckbox7" name="slide"></input>
   <div class="slide">
+    <div class="slide__html">
+      <h1>Team</h1>
+    </div>
     <div class="slide__content">
       <h1>TEAM</h1>
       <p>Et voila.</p>
