--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
-  <meta charset="UTF-8">
-  <title>HellaZ Team</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="./style.css">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Hellaz.Network</title>
+<meta name="description" content="HellaZ.Network - Hellenic Resources and Websites for Greeks.">
+<meta name="author" content="Hellaz.Team">
+<meta name="copyright" content="Hellaz.Team">
+<meta name="robots" content="index, follow">
+<meta name="keywords" content="Hellaz, Team, web, portal, home, en, el, gr, hellaz.gr, hellaz.eu, hellaz.net, hellas, news, site, short, urlz, search, αρχική, εκκίνηση,">
+<meta name="wot-verification" content="94901ba3d487d91eb5b4"/>
+<meta name="msvalidate.01" content="DC03BC1A9B216EDF51AA024F748C5C20" />
+
+  <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
