--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <meta name="msvalidate.01" content="DC03BC1A9B216EDF51AA024F748C5C20" />
 
   <link rel="stylesheet" href="./style.css">
-
+  <!-- Compiled and minified CSS -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
 <!-- partial:index.partial.html -->
